# Black-Hole-Engine

./: .gitignore  CMakeLists.txt  README.md  bootstrap.ps1  build_gpu.bat  run-engine.bat
include/: BlackHoleScene.hpp  Body.hpp  CudaIntegrator.cuh  Exporter.hpp  Integrator.hpp  Renderer.hpp  Scene.hpp  Simulation.hpp
include/glad/: glad.h
shaders/: basic.frag  basic.vert  geodesic.comp  grid.frag  grid.vert  quad.vert
src/: BlackHoleScene.cpp  Body.cpp  CudaIntegrator.cpp  CudaIntegrator.cu  Exporter.cpp  Integrator.cpp  Renderer.cpp  Simulation.cpp  glad.c  main.cpp
